fix: book tickets button safari bug

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,7 @@
+.header-book-head-btn {
+  transform: translateZ(0);
+}
+
 .moove-gdpr-branding-cnt {
   display: none;
 }
